--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Aditya Rudre's Portfolio</h1>
+    <h1>Aditya's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr/>
     <a href="./movie_ranking.html">Movies Ranking Project</a><br/>
